compiler/mesh-lexer/tests/snapshots/lexer_tests__numbers.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: IntLiteral
  text: "42"
  span:
    - 0
    - 2
- kind: Newline
  text: "\n"
  span:
    - 2
    - 3
- kind: IntLiteral
  text: 1_000_000
  span:
    - 3
    - 12
- kind: Newline
  text: "\n"
  span:
    - 12
    - 13
- kind: IntLiteral
  text: "0xFF"
  span:
    - 13
    - 17
- kind: Newline
  text: "\n"
  span:
    - 17
    - 18
- kind: IntLiteral
  text: "0xff_ff"
  span:
    - 18
    - 25
- kind: Newline
  text: "\n"
  span:
    - 25
    - 26
- kind: IntLiteral
  text: 0b1010
  span:
    - 26
    - 32
- kind: Newline
  text: "\n"
  span:
    - 32
    - 33
- kind: IntLiteral
  text: 0b1111_0000
  span:
    - 33
    - 44
- kind: Newline
  text: "\n"
  span:
    - 44
    - 45
- kind: IntLiteral
  text: 0o777
  span:
    - 45
    - 50
- kind: Newline
  text: "\n"
  span:
    - 50
    - 51
- kind: FloatLiteral
  text: "3.14"
  span:
    - 51
    - 55
- kind: Newline
  text: "\n"
  span:
    - 55
    - 56
- kind: FloatLiteral
  text: "1.0e10"
  span:
    - 56
    - 62
- kind: Newline
  text: "\n"
  span:
    - 62
    - 63
- kind: FloatLiteral
  text: "2.5e-3"
  span:
    - 63
    - 69
- kind: Newline
  text: "\n"
  span:
    - 69
    - 70
- kind: FloatLiteral
  text: 100_000.50
  span:
    - 70
    - 80
- kind: Newline
  text: "\n"
  span:
    - 80
    - 81
- kind: Eof
  text: ""
  span:
    - 81
    - 81
