compiler/mesh-lexer/tests/snapshots/lexer_tests__simple_string_escapes.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: StringStart
  text: "\""
  span:
    - 0
    - 1
- kind: StringContent
  text: simple string
  span:
    - 1
    - 14
- kind: StringEnd
  text: "\""
  span:
    - 14
    - 15
- kind: Newline
  text: "\n"
  span:
    - 15
    - 16
- kind: StringStart
  text: "\""
  span:
    - 16
    - 17
- kind: StringContent
  text: "with \\\"escape\\\" sequences\\n\\t"
  span:
    - 17
    - 46
- kind: StringEnd
  text: "\""
  span:
    - 46
    - 47
- kind: Newline
  text: "\n"
  span:
    - 47
    - 48
- kind: StringStart
  text: "\""
  span:
    - 48
    - 49
- kind: StringContent
  text: "empty: "
  span:
    - 49
    - 56
- kind: StringEnd
  text: "\""
  span:
    - 56
    - 57
- kind: Newline
  text: "\n"
  span:
    - 57
    - 58
- kind: StringStart
  text: "\""
  span:
    - 58
    - 59
- kind: StringEnd
  text: "\""
  span:
    - 59
    - 60
- kind: Newline
  text: "\n"
  span:
    - 60
    - 61
- kind: Eof
  text: ""
  span:
    - 61
    - 61
