compiler/mesh-lexer/tests/snapshots/lexer_tests__whitespace_only.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Eof
  text: ""
  span:
    - 6
    - 6
